--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">{{ title }}</a>
+  <a class="navbar-brand" href="/albion-price-tracker/">{{ title }}</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a *ngIf="!loggedIn" class="nav-link" href="/login">Log In</a>
-          <a *ngIf="loggedIn" class="nav-link" (click)="logOut" href="/login">Log Out</a>
+          <a *ngIf="!loggedIn" class="nav-link" href="/albion-price-tracker/login">Log In</a>
+          <a *ngIf="loggedIn" class="nav-link" (click)="logOut" href="/albion-price-tracker/login">Log Out</a>
         </li>
       </ul>
       <span *ngIf="currentUser" style="color:white;">{{ currentUser.userNickname }}</span>
